fix GNOME 40 show applications button visiblity

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -410,3 +410,16 @@
     margin: 0;
     spacing: 0;
 }
+
+/**
+ * GNOME 40 shows some part of the icon when the container has
+ * no width and height. To fix that we need to push the icon a litte bit to the
+ * side.
+ * This particular icon shouldn't have 0 as width and height. It can affect the
+ * height and width of dash background.
+ */
+.just-perfection-api-no-show-apps-button StIcon
+{
+    padding: 0 100px;
+}
+
